Inmob-Salesforce/force-app/main/default/objects/Financiamiento__c/Financiamiento__c.object-meta.xml
<CustomObject>
    <label>Financiamiento</label>
    <nameField>
        <label>Financiamiento Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financiamientos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>