Inmob-Salesforce/force-app/main/default/objects/Financiamiento__c/fields/Clasificacion__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion__c</fullName>
    <label>Clasificacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <default>true</default>
                <label>C</label>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>