Inmob-Salesforce/force-app/main/default/objects/Financiamiento__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <label>Contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>