Inmob-Salesforce/force-app/main/default/objects/Financiamiento__c/fields/Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotización</label>
    <referenceTo>Cotizacion__c</referenceTo>
    <relationshipLabel>Financiamientos</relationshipLabel>
    <relationshipName>Financiamientos</relationshipName>
    <type>Lookup</type>
</CustomField>