Inmob-Salesforce/force-app/main/default/objects/Financiamiento__c/fields/Cuota_de_entrada__c.field-meta.xml
<CustomField>
    <fullName>Cuota_de_entrada__c</fullName>
    <label>Cuota de entrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>