Inmob-Salesforce/force-app/main/default/objects/Financiamiento__c/fields/Fecha_cuota_inicial__c.field-meta.xml
<CustomField>
    <fullName>Fecha_cuota_inicial__c</fullName>
    <label>Fecha cuota inicial</label>
    <type>Date</type>
</CustomField>