Inmob-Salesforce/force-app/main/default/objects/Financiamiento__c/fields/Numero_de_cuotas__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_cuotas__c</fullName>
    <label>Número de cuotas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>