Inmob-Salesforce/force-app/main/default/objects/Financiamiento__c/fields/Saldo_restante__c.field-meta.xml
<CustomField>
    <fullName>Saldo_restante__c</fullName>
    <label>Saldo restante</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>