Inmob-Salesforce/force-app/main/default/objects/Financiamiento__c/fields/Tipo_de_financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_financiamiento__c</fullName>
    <label>Tipo de financiamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>