Inmob-Salesforce/force-app/main/default/objects/Financiamiento__c/fields/Total_Dividendo__c.field-meta.xml
<CustomField>
    <fullName>Total_Dividendo__c</fullName>
    <label>Total Dividendo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>